RESOLVED FIXED312364
Null deref in WebProcess::refreshIDBConnectionForWorkers() during WebPage construction
https://bugs.webkit.org/show_bug.cgi?id=312364
Summary Null deref in WebProcess::refreshIDBConnectionForWorkers() during WebPage con...
Chris Dumez
Reported 2026-04-15 01:50:02 PDT
Null deref in WebProcess::refreshIDBConnectionForWorkers() during WebPage construction.
Attachments
Chris Dumez
Comment 1 2026-04-15 01:50:09 PDT
Chris Dumez
Comment 2 2026-04-15 01:52:42 PDT
EWS
Comment 3 2026-04-15 06:08:03 PDT
Committed 311278@main (de77e9322dad): <https://commits.webkit.org/311278@main> Reviewed commits have been landed. Closing PR #62808 and removing active labels.
EWS
Comment 4 2026-04-20 22:20:41 PDT
Committed 305413.697@safari-7624-branch (febecfa9d864): <https://commits.webkit.org/305413.697@safari-7624-branch> Reviewed commits have been landed. Closing PR #5006 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.