Cherry-pick de77e9322dad. rdar://174830339

Null deref in WebProcess::refreshIDBConnectionForWorkers() during WebPage construction
    https://bugs.webkit.org/show_bug.cgi?id=312364
    rdar://174762356

    Reviewed by Ryosuke Niwa.

    WebProcess::createWebPage() uses HashMap::ensure() to insert and construct
    the WebPage in one step. During the WebPage constructor,
    WebSocketProvider triggers ensureNetworkProcessConnection(), which may call
    refreshIDBConnectionForWorkers(). That function iterates m_pageMap and
    dereferences each Ref<WebPage> via operator->(). However, the Ref<WebPage>
    for the page being constructed is still in its zeroed hash-table-empty
    state (m_ptr == nullptr) because HashMap::ensure()'s translate function
    evaluates the functor before assigning the result to the slot. This causes
    a null dereference at offset 0x38 (the m_page member within WebPage).

    Fix this by deferring refreshIDBConnectionForWorkers() to the next run loop
    turn, matching the existing pattern used for
    synchronizeCORSDisablingPatternsWithNetworkProcess() a few lines above.

    * Source/WebKit/WebProcess/WebProcess.cpp:
    (WebKit::WebProcess::ensureNetworkProcessConnection):

    Canonical link: https://commits.webkit.org/311278@main